@@ -13,6 +13,7 @@ import org.bench4q.share.communication.HttpRequester.HttpResponse;
 import org.bench4q.share.helper.MarshalHelper;
 import org.bench4q.share.master.test.resource.*;
 import org.bench4q.share.models.mainframe.MainFrameDockerResponseModel;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -22,97 +23,12 @@ import org.springframework.web.bind.annotation.ResponseBody;
 @Controller
 @RequestMapping("/docker")
 public class ContainerController {
-	private static final DockerApi controller = new DockerApi();
-	private HttpRequester httpRequester = new HttpRequester();
-
-	private String buildBaseUrl() {
-		return "133.133.134.175:5656/docker";
-	}
-
-	public void removeContainers(List<AgentModel> agents) {
-		if (agents != null) {
-			for (AgentModel agent : agents) {
-				try {
-					HttpResponse response = httpRequester.sendPostXml(
-							buildBaseUrl() + "/remove",
-							MarshalHelper.marshal(AgentModel.class, agent),
-							null);
-					MainFrameResponseModel model = (MainFrameResponseModel) MarshalHelper
-							.unmarshal(MainFrameResponseModel.class,
-									response.getContent());
-					if (model.isSuccess()) {
-						System.out.println("remove " + agent.getId());
-					}
-				} catch (IOException e) {
-					e.printStackTrace();
-				} catch (JAXBException e) {
-					e.printStackTrace();
-				}
-			}
-		}
-	}
-
-	public List<AgentModel> createContainers(
-			List<ResourceInfoModel> resourceInfoList) {
-		List<AgentModel> result = new ArrayList<AgentModel>();
-		if (resourceInfoList != null) {
-			for (ResourceInfoModel resourceInfo : resourceInfoList) {
-				HttpResponse response;
-				try {
-					response = httpRequester.sendPostXml(buildBaseUrl()
-							+ "/createTestContainer", MarshalHelper.marshal(
-							ResourceInfoModel.class, resourceInfo), null);
-					MainFrameDockerResponseModel dockerResponse = (MainFrameDockerResponseModel) MarshalHelper
-							.unmarshal(MainFrameDockerResponseModel.class,
-									response.getContent());
-					if (dockerResponse.isSuccess()) {
-						AgentModel agent = dockerResponse.getAgentModel();
-						result.add(agent);
-						System.out.println(agent.getId());
-						System.out.println(agent.getPort());
-						System.out.println(agent.getMonitorPort());
-					} else {
-						System.out.println("create fail");
-					}
-				} catch (IOException e) {
-					e.printStackTrace();
-				} catch (JAXBException e) {
-					e.printStackTrace();
-				}
-			}
-		}
-		return result;
-	}
-
-	public static void main(String[] args) {
-		ContainerController testController = new ContainerController();
-		ResourceInfoModel resourceInfo = new ResourceInfoModel();
-		resourceInfo.setCpu(4);
-		resourceInfo.setMemoryKB(768 * 1024);
-		resourceInfo.setDownloadBandwidthKByte(0);
-		resourceInfo.setUploadBandwidthKByte(0);
-		resourceInfo.setImageName("chensha/docker");
-		List<String> cmds = new ArrayList<String>();
-		cmds.add("/bin/sh");
-		cmds.add("-c");
-		cmds.add("/opt/monitor/*.sh&&java -server -jar -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -Xverify:none "
-				+ "-XX:PermSize=64m -XX:MaxPermSize=64m -Xms500m -Xms500m -Xmn200m /opt/bench4q-agent-publish/*.jar");
-		resourceInfo.setCmds(cmds);
-		resourceInfo.setImageName("chensha/docker");
-		// cmds.add("java -jar /opt/monitor/bench4q-docker-monitor.jar");
-		// cmds.add("java -jar -server -Xms1024M -Xmx1024M /opt/bench4q-agent-publish/*.jav&&java -jar /opt/monitor/bench4q-docker-monitor.jar");
-		// cmds.add("/opt/empty-jetty/start.sh");
-		// cmds.add("java -jar /opt/empty-jetty/empty-jetty-server.jar");
-		resourceInfo.setCmds(cmds);
-
-		List<ResourceInfoModel> resourceInfoList = new ArrayList<ResourceInfoModel>();
-		for (int i = 0; i < 1; i++) {
-			resourceInfoList.add(resourceInfo);
-		}
-		List<AgentModel> agents = testController
-				.createContainers(resourceInfoList);
-		testController.removeContainers(agents);
-	}
+	@Autowired
+	private DockerApi controller;
+	@Autowired
+	private HttpRequester httpRequester;
+	@Autowired
+	private ResourceNode resourceNode;
 
 	private String buildAgentMonitorUrl(AgentModel agent) {
 		return agent.getHostName() + ":" + agent.getMonitorPort();
@@ -120,14 +36,11 @@ public class ContainerController {
 
 	public void postResourInfo(AgentModel agent, ResourceInfoModel resourceInfo) {
 		try {
-			System.out.println(buildAgentMonitorUrl(agent)
-					+ "/monitor/setResourceInfo");
 			HttpResponse response = httpRequester.sendPostXml(
 					buildAgentMonitorUrl(agent) + "/monitor/setResourceInfo",
 					MarshalHelper
 							.marshal(ResourceInfoModel.class, resourceInfo),
 					null);
-			System.out.println(response.getCode());
 		} catch (Exception e) {
 			e.printStackTrace();
 		}
@@ -137,6 +50,9 @@ public class ContainerController {
 	@ResponseBody
 	public MainFrameDockerResponseModel createTestContainer(
 			@RequestBody ResourceInfoModel resource) {
+		if (!isParamLegal(resource)) {
+			return setResponseModel(false, "param illegal", null);
+		}
 		AgentModel agentModel = controller.createTestContainer(resource);
 		if (agentModel == null) {
 			return setResponseModel(false, "docker create container fail", null);
@@ -156,19 +72,17 @@ public class ContainerController {
 	@RequestMapping(value = "/currentresource", method = RequestMethod.GET)
 	@ResponseBody
 	public TestResourceModel getCurrentResourceStatus() {
-		return ResourceNode.getInstance().getCurrentStatus();
+		return resourceNode.getCurrentStatus();
 	}
 
 	@RequestMapping(value = "/create", method = RequestMethod.POST)
 	@ResponseBody
 	public MainFrameDockerResponseModel createContainer(
 			@RequestBody ResourceInfoModel resource) {
-		System.out.println(MarshalHelper.tryMarshal(resource));
 		if (!isParamLegal(resource)) {
 			return setResponseModel(false, "param illegal", null);
 		}
-		AgentModel agentModel = controller
-				.createContainerAndSetCpuQuota(resource);
+		AgentModel agentModel = controller.createContainer(resource);
 		if (agentModel == null) {
 			return setResponseModel(false, "docker create container fail", null);
 		}
